[gd_scene load_steps=10 format=2]

[ext_resource path="res://Instanciaveis/Scripts/Inimigo.gd" type="Script" id=1]
[ext_resource path="res://Conteudos/Musicas/Ataques/Padrão/Hit1.wav" type="AudioStream" id=2]
[ext_resource path="res://Conteudos/Musicas/Ataques/Padrão/Hit5.wav" type="AudioStream" id=3]
[ext_resource path="res://Instanciaveis/Estados/GerenciadorEstados.tscn" type="PackedScene" id=4]
[ext_resource path="res://Instanciaveis/Estados/Inimigo/Aguardo.tscn" type="PackedScene" id=6]
[ext_resource path="res://Instanciaveis/SpritePersonagem.tscn" type="PackedScene" id=8]
[ext_resource path="res://Conteudos/Shaders/ShaderPersonagem.shader" type="Shader" id=9]
[ext_resource path="res://Instanciaveis/Estados/Inimigo/Parado.tscn" type="PackedScene" id=10]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/brilho_purificacao = 5.0
shader_param/progresso_purificacao = 0.0
shader_param/coeficiente_mix_dano = 0.0
shader_param/cor_purificacao = Color( 0.360784, 0.847059, 1, 1 )
shader_param/cor_dano = Color( 1, 0, 0, 1 )

[node name="Inimigo" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 23
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
vida_maxima = 10.0
purificacao_maxima = 3.0

[node name="Sprite" parent="." instance=ExtResource( 8 )]
material = SubResource( 1 )
position = Vector2( 0, -17 )
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -4, 4, -8, 2, -8, -1, 0, -2, 8, -1, 8, 1, 4, 4 )

[node name="SomAtacar" type="AudioStreamPlayer2D" parent="."]

[node name="SomDanoOffensivo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="SomDanoPurificacao" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="GerenciadorEstados" parent="." instance=ExtResource( 4 )]

[node name="Purificado" parent="GerenciadorEstados" instance=ExtResource( 6 )]

[node name="Parado" parent="GerenciadorEstados" instance=ExtResource( 10 )]
